--- a/src/app/cssvariables.scss
+++ b/src/app/cssvariables.scss
@@ -1,2 +1,9 @@
 $article-background-dark: rgba(27, 31, 34, 0.85);
 $modal-background-dark: rgb(56, 61, 64);
+
+$xxlarge-screen: 1400px;
+$xlarge-screen: 1200px;
+$large-screen: 992px;
+$medium-screen: 768px;
+$small-screen: 576px;
+$xsmall-screen: 326px;
