--- a/src/app/components/articles/article-overview/article-overview.component.scss
+++ b/src/app/components/articles/article-overview/article-overview.component.scss
@@ -1,3 +1,5 @@
+@import '/src/app/cssvariables.scss';
+
 ul{
 	list-style-type: disclosure-closed;
 }
@@ -40,7 +42,7 @@ ul{
     max-height: 20rem;
 }
 
-@media(max-width: 768px){
+@media(max-width: $medium-screen){
     li{
         font-size: larger;
     }
