--- a/src/app/components/articles/map/map.component.scss
+++ b/src/app/components/articles/map/map.component.scss
@@ -1,3 +1,5 @@
+@import '/src/app/cssvariables.scss';
+
 .icon-container .icon{
     opacity: 0;
     transition: opacity 0.2s;
@@ -24,7 +26,7 @@ select {
     max-width: 75rem;
 }
 
-@media(max-width: 768px){
+@media(max-width: $medium-screen){
 	app-leaflet-map{
         margin-left: 1rem;
         margin-right: 1rem;
