--- a/src/app/components/utility/spell/spell.component.scss
+++ b/src/app/components/utility/spell/spell.component.scss
@@ -1,3 +1,5 @@
+@import '/src/app/cssvariables.scss';
+
 table{
     background-color: transparent;
 }
@@ -60,7 +62,7 @@ table{
 }
 
 
-@media(max-width:767px){
+@media(max-width: $medium-screen){
     .column-heading{
         font-size: medium;
     }
