--- a/src/app/components/utility/timestamp-list/timestamp-list.component.scss
+++ b/src/app/components/utility/timestamp-list/timestamp-list.component.scss
@@ -1,3 +1,5 @@
+@import '/src/app/cssvariables.scss';
+
 .mh-20rem{
     max-height: 20rem;
 }
@@ -60,7 +62,7 @@
     max-width: 85%;
 }
 
-@media(max-width: 768px){
+@media(max-width: $medium-screen){
     .mw-85{
         max-width: 100%;
     }
