--- a/src/app/components/utility/timestamp/timestamp.component.scss
+++ b/src/app/components/utility/timestamp/timestamp.component.scss
@@ -1,3 +1,5 @@
+@import '/src/app/cssvariables.scss';
+
 .animate__animated.animate__slideInRight{
     --animate-duration: 0.2s;
 }
@@ -28,7 +30,7 @@
     max-width: 85%;
 }
 
-@media(max-width: 768px){
+@media(max-width: $medium-screen){
 	.row{
         margin-bottom: 1rem;
         line-height: 1.2;
