Forced images manipulation buttons to auto-show on mobile

--- a/src/app/components/utility/image-carousel/image-carousel.component.scss
+++ b/src/app/components/utility/image-carousel/image-carousel.component.scss
@@ -48,3 +48,10 @@
         opacity: 1;
     }
 }
+
+@media (hover: none) {
+    .edit-image-buttons,
+    .mouseoverVisible{
+        opacity: 1;
+    }
+}
