Made button text more "normal"

--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -57,7 +57,7 @@
                 routerLink="{{priorDiaryentryUrl}}"
                 class="btn btn-secondary w-100"
                 > 
-                    Prior
+                    Back
                     <i class="fa fa-arrow-right ml-1"></i>
                 </a>
             </div>
