--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,88 +1,103 @@
 <div class="main" #article>
-    <article class="container">
-        <div class="row" *ngIf="hasUpdatePermission">
-            <div class="col-12">
-                <app-edit-toggle 
-                [isInUpdateState]="false" 
-                [link]="'update'"
-                ></app-edit-toggle>
-            </div>
-        </div>
+  <article class="container">
+    <div class="row" *ngIf="hasUpdatePermission">
+      <div class="col-12">
+        <app-edit-toggle
+          [isInUpdateState]="false"
+          [link]="'update'"
+        ></app-edit-toggle>
+      </div>
+    </div>
 
-        <!-- Heading -->
-        <div class="row">
-            <h1 class="text-center col-12">
-                {{ articleData.name }} 
-                <!-- Marker Icons -->
-                <i
-                *ngFor="let marker of articleData.marker_details; let markerIndex = index" 
-                title="Marker on Map of {{marker.map}}"
-                class="mx-1 no-underline pointer icon fas fa-{{marker.map_icon}}" 
-                routerLink="{{ markerUrls[markerIndex] }}"
-                ></i>
+    <!-- Heading -->
+    <div class="row">
+      <h1 class="text-center col-12">
+        {{ articleData.name }}
+      </h1>
 
-                <!-- Add-Marker-Icon -->
-                <i 
-                class="fa fa-plus icon ml-3"
-                title="Add Marker"
-                [ngClass]="{'d-none': !hasCreatePermission}"
-                routerLink="{{ markerCreateUrl }}"
-                ></i>
-            </h1>
+      <!-- String indicating all parent_locations -->
+      <p
+        *ngIf="articleData.parent_location_list.length > 0"
+        class="text-center font-italic col-12 mb-5"
+      >
+        <span
+          *ngFor="let loc of articleData.parent_location_list; let i = index"
+        >
+          <a routerLink="{{ parentLocationUrls[i] }}">
+            {{ loc }}
+          </a>
+          <i class="fa fa-arrow-right mx-1"></i>
+        </span>
+        {{ articleData.name }}
+      </p>
+    </div>
 
-            <!-- String indicating all parent_locations -->
-            <p *ngIf="articleData.parent_location_list.length > 0" class="text-center font-italic col-12 mb-5">
-                <span *ngFor="let loc of articleData.parent_location_list; let i = index"> 
-                    <a routerLink="{{parentLocationUrls[i]}}">
-                        {{loc}}
-                    </a>
-                    <i class="fa fa-arrow-right mx-1"></i>
-                </span>
-                {{articleData.name}}
-            </p>
-        </div>
+    <!-- Image Gallery -->
+    <app-image-carousel
+      [article_type]="'location'"
+      [article_pk]="this.articleData.pk"
+      [images]="this.articleData.images"
+    ></app-image-carousel>
 
+    <div class="mb-3">
+      <i> Marked on Maps:</i>
+      <a
+        class="badge badge-secondary mx-2 no-underline"
+        *ngFor="
+          let marker of articleData.marker_details;
+          let markerIndex = index
+        "
+        routerLink="{{ markerUrls[markerIndex] }}"
+      >
+        {{ marker.map }}
+        <!-- Marker Icons -->
+        <i class="mx-1 icon fas fa-{{ marker.map_icon }}"></i>
+      </a>
 
-        <!-- Image Gallery -->
-        <app-image-carousel
-        [article_type]="'location'"
-        [article_pk]="this.articleData.pk"
-        [images]="this.articleData.images"
-        ></app-image-carousel>
+      <a
+        class="badge badge-primary no-underline"
+        *ngIf="hasCreatePermission"
+        routerLink="{{ markerCreateUrl }}"
+      >
+        <!-- Add-Marker-Icon -->
+        <i class="fa fa-plus icon mx-1"></i>
+        Add marker
+      </a>
+    </div>
 
-        <!-- Description -->
-        <div class="mb-5">
-            <app-textfield 
-            [initialText]="articleData.description"
-            [heading]="'Description'"
-            [formStateSubject]="textfieldFormStateSubject"
-            (updateText)="onDescriptionUpdate($event)"
-            ></app-textfield>
-        </div>
+    <!-- Description -->
+    <div class="mb-5">
+      <app-textfield
+        [initialText]="articleData.description"
+        [heading]="'Description'"
+        [formStateSubject]="textfieldFormStateSubject"
+        (updateText)="onDescriptionUpdate($event)"
+      ></app-textfield>
+    </div>
 
-        <!-- Characters of Interest -->
-        <div class="mb-4">
-            <app-object-list 
-            [heading]="'Characters of Interest'" 
-            [items]="articleData.characters" 
-            [articleType]="'character'" 
-            [createLink]="characterCreateUrl"
-            ></app-object-list>
-        </div>
+    <!-- Characters of Interest -->
+    <div class="mb-4">
+      <app-object-list
+        [heading]="'Characters of Interest'"
+        [items]="articleData.characters"
+        [articleType]="'character'"
+        [createLink]="characterCreateUrl"
+      ></app-object-list>
+    </div>
 
-        <!-- Locations of Interest -->
-        <div class="encounter-list mb-5 mt-3">
-            <app-location-accordion 
-            [sublocations]="articleData.sublocations"
-            ></app-location-accordion>
-        </div>
+    <!-- Locations of Interest -->
+    <div class="encounter-list mb-5 mt-3">
+      <app-location-accordion
+        [sublocations]="articleData.sublocations"
+      ></app-location-accordion>
+    </div>
 
-        <!-- Footer (Move to other Article + Delete Article) -->
-        <app-article-footer
-        (delete)="deleteArticle()"
-        [link]="locationOverviewUrl"
-        [label]="'Back to Locations'"
-        [deleteMessage]="'Delete '+articleData.name+'?'"
-        ></app-article-footer>
-    </article>
+    <!-- Footer (Move to other Article + Delete Article) -->
+    <app-article-footer
+      (delete)="deleteArticle()"
+      [link]="locationOverviewUrl"
+      [label]="'Back to Locations'"
+      [deleteMessage]="'Delete ' + articleData.name + '?'"
+    ></app-article-footer>
+  </article>
 </div>
