--- a/src/app/custom_bootstrap.scss
+++ b/src/app/custom_bootstrap.scss
@@ -9,7 +9,7 @@ $card-color: #fff !important;
 // Color system
 //
 
-$white:    #fff !default;
+$white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #ebebeb !default;
 $gray-300: #dee2e6 !default;
@@ -19,210 +19,214 @@ $gray-600: #9b9a9a !default;
 $gray-700: #393e41 !default;
 $gray-800: #303030 !default;
 $gray-900: #222 !default;
-$black:    #000 !default;
+$black: #000 !default;
 
-$blue:    #42566a !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     hsl(358, 50%, 50%) !default;
-$orange:  #fd7e14 !default;
-$yellow:  #f39c12 !default;
-$green:   #00bc8c !default;
-$teal:    #20c997 !default;
-$cyan:    #3498db !default;
+$blue: #42566a !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #e83e8c !default;
+$red: hsl(358, 50%, 50%) !default;
+$orange: #fd7e14 !default;
+$yellow: #f39c12 !default;
+$green: #00bc8c !default;
+$teal: #20c997 !default;
+$cyan: #3498db !default;
 
-$primary:       $blue !default;
-$secondary:     $gray-700 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-500 !default;
-$dark:          $gray-800 !default;
+$primary: $blue !default;
+$secondary: $gray-700 !default;
+$success: $green !default;
+$info: $cyan !default;
+$warning: $yellow !default;
+$danger: $red !default;
+$light: $gray-500 !default;
+$dark: $gray-800 !default;
 
-$yiq-contrasted-threshold:  175 !default;
+$yiq-contrasted-threshold: 175 !default;
 
 // Body
 
-$body-bg:                   $gray-900 !default;
-$body-color:                $white !default;
+$body-bg: $gray-900 !default;
+$body-color: $white !default;
 
 // Links
 
-$link-color:                $success !default;
+$link-color: $success !default;
 
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$font-size-base:              .9375rem !default;
-$font-size-sm:                $font-size-base * .88 !default;
-$h1-font-size:                3rem !default;
-$h2-font-size:                2.5rem !default;
-$h3-font-size:                2rem !default;
-$text-muted:                  $gray-600 !default;
+$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base: 0.9375rem !default;
+$font-size-sm: $font-size-base * 0.88 !default;
+$h1-font-size: 3rem !default;
+$h2-font-size: 2.5rem !default;
+$h3-font-size: 2rem !default;
+$text-muted: $gray-600 !default;
 
 // Tables
 
-$table-accent-bg:             $gray-800 !default;
-$table-border-color:          $gray-700 !default;
+$table-accent-bg: $gray-800 !default;
+$table-border-color: $gray-700 !default;
 
 // Forms
 
-$input-border-color:                $body-bg !default;
-$input-group-addon-color:           $gray-500 !default;
-$input-group-addon-bg:              $gray-700 !default;
-$custom-file-color:                 $gray-500 !default;
-$custom-file-border-color:          $body-bg !default;
+$input-border-color: $body-bg !default;
+$input-group-addon-color: $gray-500 !default;
+$input-group-addon-bg: $gray-700 !default;
+$custom-file-color: $gray-500 !default;
+$custom-file-border-color: $body-bg !default;
 
 // Dropdowns
 
-$dropdown-bg:                       $gray-900 !default;
-$dropdown-border-color:             $gray-700 !default;
-$dropdown-divider-bg:               $gray-700 !default;
-$dropdown-link-color:               $white !default;
-$dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $primary !default;
+$dropdown-bg: $gray-900 !default;
+$dropdown-border-color: $gray-700 !default;
+$dropdown-divider-bg: $gray-700 !default;
+$dropdown-link-color: $white !default;
+$dropdown-link-hover-color: $white !default;
+$dropdown-link-hover-bg: $primary !default;
 
 // Navs
 
-$nav-link-padding-x:                2rem !default;
-$nav-link-disabled-color:           $gray-500 !default;
-$nav-tabs-border-color:             $gray-700 !default;
-$nav-tabs-link-hover-border-color:  $nav-tabs-border-color $nav-tabs-border-color transparent !default;
-$nav-tabs-link-active-color:        $white !default;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent !default;
+$nav-link-padding-x: 2rem !default;
+$nav-link-disabled-color: $gray-500 !default;
+$nav-tabs-border-color: $gray-700 !default;
+$nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color
+  transparent !default;
+$nav-tabs-link-active-color: $white !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color
+  $nav-tabs-border-color transparent !default;
 
 // Navbar
 
-$navbar-padding-y:                  1rem !default;
-$navbar-dark-color:                rgba($white, .6) !default;
-$navbar-dark-hover-color:          $white !default;
-$navbar-light-color:                rgba($gray-900, .7) !default;
-$navbar-light-hover-color:          $gray-900 !default;
-$navbar-light-active-color:         $gray-900 !default;
-$navbar-light-toggler-border-color: rgba($gray-900, .1) !default;
+$navbar-padding-y: 1rem !default;
+$navbar-dark-color: rgba($white, 0.6) !default;
+$navbar-dark-hover-color: $white !default;
+$navbar-light-color: rgba($gray-900, 0.7) !default;
+$navbar-light-hover-color: $gray-900 !default;
+$navbar-light-active-color: $gray-900 !default;
+$navbar-light-toggler-border-color: rgba($gray-900, 0.1) !default;
 
 // Pagination
 
-$pagination-color:                  $white !default;
-$pagination-bg:                     $success !default;
-$pagination-border-width:           0 !default;
-$pagination-border-color:           transparent !default;
-$pagination-hover-color:            $white !default;
-$pagination-hover-bg:               lighten($success, 10%) !default;
-$pagination-hover-border-color:     transparent !default;
-$pagination-active-bg:              $pagination-hover-bg !default;
-$pagination-active-border-color:    transparent !default;
-$pagination-disabled-color:         $white !default;
-$pagination-disabled-bg:            darken($success, 15%) !default;
-$pagination-disabled-border-color:  transparent !default;
+$pagination-color: $white !default;
+$pagination-bg: $success !default;
+$pagination-border-width: 0 !default;
+$pagination-border-color: transparent !default;
+$pagination-hover-color: $white !default;
+$pagination-hover-bg: lighten($success, 10%) !default;
+$pagination-hover-border-color: transparent !default;
+$pagination-active-bg: $pagination-hover-bg !default;
+$pagination-active-border-color: transparent !default;
+$pagination-disabled-color: $white !default;
+$pagination-disabled-bg: darken($success, 15%) !default;
+$pagination-disabled-border-color: transparent !default;
 
 // Jumbotron
 
-$jumbotron-bg:                      $gray-800 !default;
+$jumbotron-bg: $gray-800 !default;
 
 // Cards
 
-$card-cap-bg:                       $gray-700 !default;
-$card-bg:                           $gray-800 !default;
+$card-cap-bg: $gray-700 !default;
+$card-bg: $gray-800 !default;
 
 // Popovers
 
-$popover-bg:                        $gray-800 !default;
-$popover-header-bg:                 $gray-700 !default;
+$popover-bg: $gray-800 !default;
+$popover-header-bg: $gray-700 !default;
 
 // Toasts
 
-$toast-background-color:            $gray-700 !default;
-$toast-header-background-color:     $gray-800 !default;
+$toast-background-color: $gray-700 !default;
+$toast-header-background-color: $gray-800 !default;
 
 // Modals
 
-$modal-content-bg:                  $gray-800 !default;
-$modal-content-border-color:        $gray-700 !default;
-$modal-header-border-color:         $gray-700 !default;
+$modal-content-bg: $gray-800 !default;
+$modal-content-border-color: $gray-700 !default;
+$modal-header-border-color: $gray-700 !default;
 
 // Progress bars
 
-$progress-bg:                       $gray-700 !default;
+$progress-bg: $gray-700 !default;
 
 // List group
 
-$list-group-bg:                     $gray-800 !default;
-$list-group-border-color:           $gray-700 !default;
-$list-group-hover-bg:               $gray-700 !default;
+$list-group-bg: $gray-800 !default;
+$list-group-border-color: $gray-700 !default;
+$list-group-hover-bg: $gray-700 !default;
 
 // Breadcrumbs
 
-$breadcrumb-bg:                     $gray-700 !default;
+$breadcrumb-bg: $gray-700 !default;
 
 // Close
 
-$close-color:                       $white !default;
-$close-text-shadow:                 none !default;
+$close-color: $white !default;
+$close-text-shadow: none !default;
 
 // Code
 
-$pre-color:                         inherit !default;
+$pre-color: inherit !default;
 
-button.btn.btn-link:hover{
-    text-decoration: none !important;
+button.btn.btn-link:hover {
+  text-decoration: none !important;
 }
 
-button.btn.btn-link:focus{
-    text-decoration: none !important;
-    box-shadow: none !important;
+button.btn.btn-link:focus {
+  text-decoration: none !important;
+  box-shadow: none !important;
 }
 
 //Explicitly expand buttons in Accordion components to 100% width
-.card button.btn.btn-link{
-    width: 100%;
-    text-align: left;
+.card button.btn.btn-link {
+  width: 100%;
+  text-align: left;
 }
 
-#article-loader-spinner.spinner-border{
-    width: 5rem !important;
-    height: 5rem !important;
-    border-width: 1.5rem;
+#article-loader-spinner.spinner-border {
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  border-width: 0.75rem;
 }
 
 //Style Forms
-.form-control{
-    height: 2.75rem;
-    font-size: 1.2rem;
+.form-control {
+  height: 2.75rem;
+  font-size: 1.2rem;
 }
 
-input.form-control{
-    background-color: transparent !important;
-    color: white !important;
-    border: solid white 1px !important;
+input.form-control {
+  background-color: transparent !important;
+  color: white !important;
+  border: solid white 1px !important;
 }
 
-input.form-control:focus{
-    box-shadow: 3px blue;
-    color: white;
+input.form-control:focus {
+  box-shadow: 3px blue;
+  color: white;
 }
 
-select.form-control{
-    color: white !important;
-    background-color: #4c4c4c !important;
+select.form-control {
+  color: white !important;
+  background-color: #4c4c4c !important;
 }
 
-select:focus{
-    background-color: #4c4c4c;
-    box-shadow: 3px blue;
-    color: white;
+select:focus {
+  background-color: #4c4c4c;
+  box-shadow: 3px blue;
+  color: white;
 }
 
-option{
-    background-color: #1b1f22;
-    color: white;
-    font-size: 18px;
+option {
+  background-color: #1b1f22;
+  color: white;
+  font-size: 18px;
 }
 
-.custom-control.custom-checkbox{
-    transform:scale(1.2);
-    transform-origin: 0;
+.custom-control.custom-checkbox {
+  transform: scale(1.2);
+  transform-origin: 0;
 }
