Added loading indicator to image uploading, updating and deleting

--- a/src/app/components/utility/spinner/spinner.component.html
+++ b/src/app/components/utility/spinner/spinner.component.html
@@ -1,3 +1,1 @@
-<div class="d-flex">
-  <div id="article-loader-spinner" class="spinner-border m-auto"></div>
-</div>
+<div id="article-loader-spinner" class="spinner-border"></div>
