--- a/src/app/components/utility/image-carousel/image-carousel.component.html
+++ b/src/app/components/utility/image-carousel/image-carousel.component.html
@@ -1,114 +1,144 @@
 <ng-container [ngSwitch]="formState">
-    <ng-container *ngSwitchCase="FormState.READ" [ngTemplateOutlet]="displayState"></ng-container>
-    <ng-container *ngSwitchCase="FormState.UPDATE" [ngTemplateOutlet]="updateState"></ng-container>
-    <ng-container *ngSwitchCase="FormState.CREATE" [ngTemplateOutlet]="createState"></ng-container>
-    <ng-container *ngSwitchCase="FormState.DELETE" [ngTemplateOutlet]="deleteState"></ng-container>
-    <!-- <ng-container *ngSwitchCase="FormState.UPDATEOUTDATED" [ngTemplateOutlet]="outdatedUpdateState"><ng-container> -->
-
+  <ng-container
+    *ngSwitchCase="FormState.READ"
+    [ngTemplateOutlet]="displayState"
+  ></ng-container>
+  <ng-container
+    *ngSwitchCase="FormState.UPDATE"
+    [ngTemplateOutlet]="updateState"
+  ></ng-container>
+  <ng-container
+    *ngSwitchCase="FormState.CREATE"
+    [ngTemplateOutlet]="createState"
+  ></ng-container>
+  <ng-container
+    *ngSwitchCase="FormState.DELETE"
+    [ngTemplateOutlet]="deleteState"
+  ></ng-container>
+  <!-- <ng-container *ngSwitchCase="FormState.UPDATEOUTDATED" [ngTemplateOutlet]="outdatedUpdateState"><ng-container> -->
 </ng-container>
 
-
 <ng-template #displayState>
-    <ng-container *ngIf="images?.length > 0; else defaultImage">
-        <ngb-carousel 
-        #imageCarousel
-        interval="false"
-        [showNavigationArrows]="images.length > 1"
-        [showNavigationIndicators]="images.length > 1"
-        (slide)="onSlide($event)"
-        >
-            <ng-template ngbSlide *ngFor="let image of images; let i = index" [id]="'imageIndex-' + i">
-                <div class="image-container" [title]="image.name">
-                    <img [src]="constants.wikiUrl + image.image" alt="Image {{i}} of the character">
-                </div>
-            </ng-template>
-        
-        </ngb-carousel>    
-    </ng-container>
+  <ng-container *ngIf="images?.length > 0; else defaultImage">
+    <ngb-carousel
+      #imageCarousel
+      interval="false"
+      [showNavigationArrows]="images.length > 1"
+      [showNavigationIndicators]="images.length > 1"
+      (slide)="onSlide($event)"
+    >
+      <ng-template
+        ngbSlide
+        *ngFor="let image of images; let i = index"
+        [id]="'imageIndex-' + i"
+      >
+        <div class="image-container" [title]="image.name">
+          <img
+            [src]="constants.wikiUrl + image.image"
+            alt="Image {{ i }} of the character"
+          />
+        </div>
+      </ng-template>
+    </ngb-carousel>
+  </ng-container>
 
-    <!-- Image Edit/Delete/Create Buttons -->
-    <div class="edit-image-buttons mt-2">
-        <!-- Create Image Button -->
-        <i 
-        class="fa fa-plus-square-o fa-2x icon mx-4" 
-        *ngIf="hasCreatePermission"
-        aria-hidden="true" 
-        (click)="toggleCreateState()"
-        ></i>
+  <!-- Image Edit/Delete/Create Buttons -->
+  <div class="edit-image-buttons mt-2">
+    <!-- Create Image Button -->
+    <i
+      class="fa fa-plus-square-o fa-2x icon mx-4"
+      *ngIf="hasCreatePermission"
+      aria-hidden="true"
+      (click)="toggleCreateState()"
+    ></i>
 
-        <!-- Update Image button -->
-        <i 
-        class="fa fa-pencil fa-2x icon mx-4" 
-        *ngIf="images?.length > 0 && hasUpdatePermission"
-        aria-hidden="true" 
-        (click)="toggleEditState()"
-        ></i>
+    <!-- Update Image button -->
+    <i
+      class="fa fa-pencil fa-2x icon mx-4"
+      *ngIf="images?.length > 0 && hasUpdatePermission"
+      aria-hidden="true"
+      (click)="toggleEditState()"
+    ></i>
 
-        <!-- Delete Image Button -->
-        <i 
-        class="fa fa-trash fa-2x icon mx-4"
-        *ngIf="images?.length > 1 && hasDeletePermission"
-        aria-hidden="true" 
-        (click)="toggleDeleteState()"
-        ></i>
-
-    </div>
+    <!-- Delete Image Button -->
+    <i
+      class="fa fa-trash fa-2x icon mx-4"
+      *ngIf="images?.length > 1 && hasDeletePermission"
+      aria-hidden="true"
+      (click)="toggleDeleteState()"
+    ></i>
+  </div>
 </ng-template>
 
 <ng-template #updateState>
-    <div class="card p-4 m-2">
-        <h5 class="text-center">Updating this image:</h5>
+  <div class="card p-4 m-2">
+    <h5 class="text-center">
+      Updating this image:
+      <app-spinner *ngIf="isLoading"></app-spinner>
+    </h5>
 
-        <div class="image-container">
-            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
-        </div>
-    
-        <app-formly-formcontainer 
-        [model]="userModel" 
-        [fields]="formlyFields"
-        [enctype]="'multipart/form-data'"
-        (formlySubmit)="onSubmit()" 
-        (formlyCancel)="onCancel()"
-        ></app-formly-formcontainer>
+    <div class="image-container">
+      <img
+        title="None"
+        class="gallery-image"
+        [src]="constants.wikiUrl + getCurrentMainImage().image"
+        alt=""
+      />
     </div>
-</ng-template>
 
+    <app-formly-formcontainer
+      [model]="userModel"
+      [fields]="formlyFields"
+      [enctype]="'multipart/form-data'"
+      (formlySubmit)="onSubmit()"
+      (formlyCancel)="onCancel()"
+    ></app-formly-formcontainer>
+  </div>
+</ng-template>
 
 <ng-template #createState>
-    <div class="card p-4 m-2">
-        <h5 class="text-center">Upload new image</h5>
+  <div class="card p-4 m-2">
+    <h5 class="text-center">
+      Upload new image
+      <app-spinner *ngIf="isLoading"></app-spinner>
+    </h5>
 
-        <app-formly-formcontainer 
-        [model]="userModel" 
-        [fields]="formlyFields"
-        [enctype]="'multipart/form-data'"
-        (formlySubmit)="onSubmit()" 
-        (formlyCancel)="onCancel()"
-        ></app-formly-formcontainer>
-    </div>
+    <app-formly-formcontainer
+      [model]="userModel"
+      [fields]="formlyFields"
+      [enctype]="'multipart/form-data'"
+      (formlySubmit)="onSubmit()"
+      (formlyCancel)="onCancel()"
+    ></app-formly-formcontainer>
+  </div>
 </ng-template>
-
 
 <ng-template #deleteState>
-    <div class="card p-4 m-2">
-        <h5 class="text-center">Deleting this image:</h5>
-    
-        <div class="image-container">
-            <img title="None" class="gallery-image" [src]="constants.wikiUrl + getCurrentMainImage().image" alt="">
-        </div>
-    
-        <div class="text-center mt-3">
-            Do you really want to delete this image?
-            <div class="btn btn-dark mr-3" (click)="onCancel()"> No </div>
-            <div class="btn btn-danger" (click)="deleteCurrentMainImage()"> Yes </div>
-        </div>
+  <div class="card p-4 m-2">
+    <h5 class="text-center">
+      Deleting this image:
+      <app-spinner *ngIf="isLoading"></app-spinner>
+    </h5>
+
+    <div class="image-container">
+      <img
+        title="None"
+        class="gallery-image"
+        [src]="constants.wikiUrl + getCurrentMainImage().image"
+        alt=""
+      />
     </div>
+
+    <div class="text-center mt-3">
+      Do you really want to delete this image?
+      <div class="btn btn-dark mr-3" (click)="onCancel()">No</div>
+      <div class="btn btn-danger" (click)="deleteCurrentMainImage()">Yes</div>
+    </div>
+  </div>
 </ng-template>
 
-
 <ng-template #outdatedUpdateState>
-
-    <app-compare-form-container
+  <app-compare-form-container
     class="d-flex justify-content-center"
     [formlyFields]="formlyFields"
     [modelFromUser]="userModel"
@@ -116,22 +146,24 @@
     [displayVertically]="true"
     (updateSubmit)="onSubmit()"
     (cancel)="onCancel()"
-    ></app-compare-form-container>
-
+  ></app-compare-form-container>
 </ng-template>
 
 <ng-template #defaultImage>
-    <ngb-carousel [showNavigationArrows]="false" [showNavigationIndicators]="false">
-
-        <ng-template ngbSlide>
-            <div class="image-container default-image">
-                <img [src]="constants.defaultImageUrl" alt="Default Image stand in since this article has none">
-                <div class="image-caption">
-                    <p>This article doesn't have an image yet</p>
-                </div>
-            </div>
-
-        </ng-template>
-
-    </ngb-carousel>
+  <ngb-carousel
+    [showNavigationArrows]="false"
+    [showNavigationIndicators]="false"
+  >
+    <ng-template ngbSlide>
+      <div class="image-container default-image">
+        <img
+          [src]="constants.defaultImageUrl"
+          alt="Default Image stand in since this article has none"
+        />
+        <div class="image-caption">
+          <p>This article doesn't have an image yet</p>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-carousel>
 </ng-template>
